MDEV-12379: Server crashes in TABLE_LIST::is_with_table on SHOW CREATE VIEW

In case of error on opening VIEW (absent table for example) it is still possible to print its definition but some variable is not set (table_list->derived->derived) so it is better do not try to test it when there is safer alternative (table_list itself).